- fix spacing/colors (again)

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -75,9 +75,9 @@ div.narrowed {
 }
 
 .method-subtitle {
-  margin: 4rem 0 4rem 0;
+  margin: 3rem 0 2rem 0;
   @include mixins.from(1024px) {
-    margin: 6rem 0 2rem 0;
+    margin: 6rem 0 3rem 0;
   }
 }
 
@@ -232,9 +232,8 @@ div.narrowed {
 .section-subtitle {
   font-weight: 100;
   color: white;
-  line-height: 2.6rem;
+  line-height: 2.4rem;
   font-weight: normal;
-  /* margin-top: 6rem; */
   @include mixins.until(768px) {
     line-height: 2rem;
   }
